# clean-architecture-fastapi

./: .env-app.sample  .env-postgresql.sample  .envrc  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  renovate.json
app/: init_db.py  main.py
app/api/v1/: api.py  dependency.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  logger.py  usecase_injector.py
app/depends/: repository_module.py  usecase_module.py
app/domains/: user.py
app/exceptions/: exception.py
app/injector/: repository_injector.py
app/interfaces/gateways/: db.py  schema.py  user_repository.py
app/lib/: jwt.py  security.py
app/usecases/auth/: auth_usecase.py
app/usecases/users/: data.py  user_create_usecase.py  user_delete_usecase.py  user_get_usercase.py  user_update_usecase.py
docs/: README.ja.md
postgresql/: docker-compose.yml
tests/: test_main.py
