[tool.poetry]
name = "clean-architecture-fastapi"
version = "0.1.0"
description = "api server with clean architecture"
authors = ["Suzuki Masaya <vagrant@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.18"
uvicorn = "^0.34.0"
email-validator = "^2.0.0-post.0"
psycopg2 = "^2.9.6"
python-multipart = "^0.0.20"
python-jose = "^3.3.0"
passlib = "^1.7.4"
injector = "^0.22.0"
pydantic-settings = "^2.0.1"

[tool.poetry.extras]
pgsql = ["psycopg2"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.4.1"
flake8 = "^7.0.0"
black = "^25.0.0"
isort = "^6.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
