[project]
name = "clean-architecture-fastapi"
version = "0.1.0"
description = "Sample api server on clean architecture"
authors = [
  {name = "Suzuki Masaya", email = "ikachang-kawaii@nifty.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "injector (>=0.22.0,<0.23.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[project.optional-dependencies]
pgsql = ["psycopg2"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.4.1"
flake8 = "^7.0.0"
black = "^25.0.0"
isort = "^6.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
