[project]
name = "clean-architecture-fastapi"
version = "0.1.0"
description = "Sample api server on clean architecture"
authors = [
  {name = "Suzuki Masaya", email = "ikachang-kawaii@nifty.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0,<0.137.0",
    "sqlalchemy>=2.0.42,<3.0.0",
    "uvicorn>=0.46.0,<0.47.0",
    "email-validator>=2.2.0,<3.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "python-multipart>=0.0.26,<0.0.27",
    "python-jose>=3.5.0,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
    "injector>=0.24.0,<0.25.0",
    "pydantic-settings>=2.10.1,<3.0.0",
]

[project.optional-dependencies]
pgsql = ["psycopg2"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.4.1",
    "flake8>=7.0.0",
    "black>=25.0.0",
    "isort>=6.0.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "taskipy>=1.14.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload"
lint = "flake8 ."
format = "black ."
typecheck = "mypy ."
